# tcga-analysis

./: .gitignore  COX_screening.py  CoxPH.py  CoxUniScreening.py  FilterUniResults.py  HyperParameterTuning.py  KIRC_RSEM.py  KIRC_clin.py  KIRC_cph.pickle  KIRC_merge_clin_RSEM.py  KMCPlotter.py  KME.py  LassoCox.py  ParameterAnalysis.py  README.md  cox_univariate_screening.py  coxnet_alpha_selection.py  graph_plotting_script.py  main.py  output.html  output.txt  output.xlsx  plotanalysis.py  preprocessing.py  pyproject.toml  resultsAnalysis.py  test.py  weight_selection.py
cache/: c_index_top30_penalty_vs_l1_ratio.pkl  constant_columns.pkl  failed_genes.pkl  lasso_cox_regression_top100.pickle  lasso_cox_regression_top1000.pickle  lasso_cox_regression_top30.pickle  lasso_cox_regression_top50.pickle  log_likelihood_top30_penalty_vs_l1_ratio.pkl
models/: cox_ph_top100_penalty0.001_l1_ratio0.01.pkl  cox_ph_top100_penalty0.001_l1_ratio0.05.pkl  cox_ph_top100_penalty0.001_l1_ratio0.1.pkl  cox_ph_top100_penalty0.001_l1_ratio0.5.pkl  cox_ph_top100_penalty0.001_l1_ratio1.0.pkl  cox_ph_top100_penalty0.01_l1_ratio0.01.pkl  cox_ph_top100_penalty0.01_l1_ratio0.05.pkl  cox_ph_top100_penalty0.01_l1_ratio0.1.pkl  cox_ph_top100_penalty0.01_l1_ratio0.5.pkl  cox_ph_top100_penalty0.01_l1_ratio1.0.pkl  cox_ph_top100_penalty0.05_l1_ratio0.01.pkl  cox_ph_top100_penalty0.05_l1_ratio0.05.pkl  cox_ph_top100_penalty0.05_l1_ratio0.1.pkl  cox_ph_top100_penalty0.05_l1_ratio0.5.pkl  cox_ph_top100_penalty0.05_l1_ratio1.0.pkl  cox_ph_top100_penalty0.1_l1_ratio0.01.pkl  (+303 more)
output/: alphas.html  index.html  (+1 more)
(+17 files in other folders)
